--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yuwen Heng"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "PhD student at the VLC group, University of Southampton"
   location         : "Southampton"
   employer         :
