--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Yuwen Heng, PhD student in CV"
 title_separator          : "-"
 name                     : &name "Yuwen Heng"
 description              : &description "personal description"
-url                      : https://123mutourener.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://heng-yuwen.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "123mutourener/123mutourener.github.io"
+repository               : "heng-yuwen/heng-yuwen.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
