--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,10 +11,10 @@ main:
 #
 #  - title: "Portfolio"
 #    url: /portfolio/
-#
-  - title: "Posts"
-    url: /posts/
-#
+# #
+#   - title: "Posts"
+#     url: /posts/
+# #
   - title: "CV"
     url: /cv/
 #
