--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yuwen Heng"
   avatar           : "profile.jpg"
-  bio              : "PhD student at the VLC group, University of Southampton"
+  bio              : "PhD, Multi-Modal Deep Learning Researcher (mainly Computer Vision)"
   location         : "Southampton"
   employer         :
   pubmed           : #
