--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ main:
   - title: "Profile"
     url: https://www.linkedin.com/in/hengyuwen/
   - title: "GitBook"
-    url: docs.hengyuwen.com
+    url: https://docs.hengyuwen.com
 #
 #  - title: "Guide"
 #    url: /markdown/
